fix padding when no overflow-y

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -88,7 +88,7 @@ body {
 }
 
 .docsNavContainer {
-  margin: 24px 0 !important;
+  margin: 50px 0 !important;
 }
 
 .fixedHeaderContainer {
